added angular app

--- a/public/admin.app/settings/layoutTypes/layoutEditor.directive.html
+++ b/public/admin.app/settings/layoutTypes/layoutEditor.directive.html
@@ -1,4 +1,7 @@
-<div>
-<h3>{{ VM.Item.title }}</h3>
-<layout-item-selector item="item" ng-repeat="item in VM.Item.items"></layout-item-selector>
+<div class="row">
+    <div class="col-md-12">
+        <h3>{{ VM.Item.title }}</h3>
+        <layout-item-selector item="item" ng-repeat="item in VM.Item.items"></layout-item-selector>
+    </div>
+
 </div>
