--- a/public/admin.app/settings/layoutTypes/image.type.html
+++ b/public/admin.app/settings/layoutTypes/image.type.html
@@ -11,7 +11,22 @@
 
             <div class="form-group">
                 <label>Link</label>
-                <input type="text" ng-model="item.href" class="form-control">
+                <div class="row">
+                    <div class="col-md-8">
+                        <input type="text" ng-model="item.href" class="form-control">
+                    </div>
+                    <div class="col-md-4">
+                        <select ng-model="item.target" class="form-control col-md-4">
+                            <option value="">Target</option>
+                            <option value="_blank">_blank</option>
+                            <option value="_parent">_parent</option>
+                            <option value="_self">_self</option>
+                            <option value="_top">_top</option>
+                        </select>
+                    </div>
+                </div>
+
+
             </div>
 
             <div class="form-group">
