added angular app

--- a/public/admin.layout.template.html
+++ b/public/admin.layout.template.html
@@ -120,6 +120,8 @@
 <script src="/admin.app/components/tabs/tabContent.directive.js"></script>
 <script src="/admin.app/components/formFilter.directive.js"></script>
 <script src="/admin.app/components/fileInput.directive.js"></script>
+<script src="/admin.app/components/appIsInitialized.directive.js"></script>
+<script src="/admin.app/components/whenReady.directive.js"></script>
 
 <script src="/admin.app/dashboard/dashboard.module.js"></script>
 <script src="/admin.app/dashboard/dashboard.controller.js"></script>
